<resources>
    <string name="app_name">PointProject</string>
    <string name="title_activity_maps">Map</string>
    <string name="pay_point">payPoint</string>

    <!--Strings related to maps-->
    <string name="null_location">Sorry, can\'t get your location</string>
    <string name="no_location_permission">Location permission isn\'t granted</string>
    <string name="settings">Settings</string>
    <string name="grant_location_permission">Open Permissions and grant the location permission</string>
    <string name="notification_text">You\'re moving in the zone</string>
    <string name="geofence_notification_text">Notification text</string>
    <string name="geofence_transition_entered">Entered geofence</string>
    <string name="geofence_transition_exited">Exited geofence</string>
    <string name="geofence_transition_dwell">Dwelling geofence</string>
    <string name="permission_granted">Permission was granted!</string>
    <string name="security_exception">SecurityException:\n</string>
    <string name="permission_denied">Permission denied!</string>
    <string name="google_api_client_connection_failed">Connection to GoogleApiClient failed:\n</string>
    <string name="mock_location_detected">Cheater no cheating! Disable \'Allow Mock Location\' in device settings</string>

    <!--Drawer menu strings-->
    <string name="menu_play">Играть!</string>
    <string name="menu_cash_withdraw">Вывести средства</string>
    <string name="menu_social">Мы в соцсети</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_rules">Правила</string>
    <string name="menu_leaders">Лидеры</string>
    <string name="menu_exit">Выход</string>
    <string name="menu_crystals">Кристалы</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Sign in</string>
    <string-array name="entries">
        <item>English</item>
        <item>Русский</item>
    </string-array>
    <string-array name="entry_values">
        <item>eng</item>
        <item>ру</item>
    </string-array>

    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_login">This login is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!--Strings related to AreaDetails and race details-->
    <string name="raceParticipantsNumber">Number op participants: %d</string>
    <string name="raceReward">Reward in uah: %f</string>
    <string name="raceArea">Area in meters: %f</string>
    <string name="pointLifetime">Point life time: %f</string>
    <string name="startTime">Start time: %f</string>
    <string name="msg_default_login_error">Sorry, server error occurred.</string>
    <string name="user_login">Login: %s</string>
    <string name="user_name">Name: %s</string>
    <string name="user_last_name">Last name: %s</string>
    <string name="user_age">Age: %d</string>
    <string name="user_phone_number">Phone number: %d</string>
    <string name="bad_internet_connection">Check your internet connection</string>
    <string name="authentication_progress">Authenticating...</string>
    <string name="crystals">Crystals</string>
    <string name="user_info_title">User Info</string>
    <string name="ok">OK</string>
    <string name="add">ADD</string>
    <string name="mocked_location_detected">Cheater, no cheating!  You are using mock location. Please do not do it again.</string>
    <string name="no_account">No account yet? Create one</string>
    <string name="user_load_error">Can\'t get user. Please check your network</string>
    <string name="auth_telegram">Authenticate by Telegram</string>
    <string name="auth_sms">Authenticate by SMS</string>
    <string name="auth_enter_code">Enter code</string>
    <string name="wrong_auth_code">Wrong code. Try again.</string>
    <string name="invalid_phone_number">Invalid phone number.</string>
    <string name="sms_quota_exceeded">SMS quota exceeded\n Please let us know if you see this message, we\'ll fix this little problem as soon as possible</string>
    <string name="sms_will_arrive">Your sms will arrive in few seconds.</string>
    <string name="create_account">Create Account</string>
    <string name="registration_login_text">Already a member? Login</string>

    <string name="prompt_phone">Phone number</string>
    <string name="sign_up">Sign up</string>
    <string name="msg_invalid_phone">This phone is invalid</string>
    <string name="empty_login">Empty login</string>
    <string name="empty_password">Empty password</string>
    <string name="wrong_login_password">Wrong login or password</string>
    <string name="code">Code</string>
    <string name="empty_field">This field can not be empty</string>
    <string name="wrong_code">Wrong code</string>
    <string name="invalid_phone">This phone number is not valid</string>
    <string name="wait_for_sms">Sit back and Relax while we verify your mobile number\n (Enter the code overhead if we fail to detect the SMS automatically)</string>
    <string name="no_internet_msg">No Internet Connection\n  Make sure your device connected to the internet</string>
    <string name="msg_empty_number">Please enter you phone number</string>
    <string name="msg_empty_code">Please enter code</string>
    <string name="msg_wrong_code">Wrong code\n Please tre again</string>
    <string name="msg_invalid_phone_number">Entered phone number is not valid\n Please enter phone number, which you are using at the moment</string>
    <string name="msg_sms_verification_failed">Sorry, you sms verification failed for some reasons\n Please try again</string>
    <string name="resend_message">Resend message</string>

</resources>
