<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--different group ids for view separator between groups-->
    <group android:checkableBehavior="single"
        android:id="@+id/main">
        <item android:id="@+id/menu_play"
            android:title="@string/menu_play"
            />
        <item android:id="@+id/menu_leaders"
            android:title="@string/menu_leaders"
            />
        <item android:id="@+id/menu_rules"
            android:title="@string/menu_rules"
            />
        <item android:id="@+id/menu_settings"
            android:title="@string/menu_settings"
            />
        <item android:id="@+id/menu_exit"
            android:title="@string/menu_exit"
            />
    </group>


    <group android:checkableBehavior="single"
        android:id="@+id/test">
        <item android:id="@+id/menu_mock_notification"
            android:title="Тест счётчика на иконке"
        />
    </group>
</menu>