<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="56dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp">

        <ImageView android:src="@drawable/ic_temp_logo"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            android:layout_gravity="center_horizontal" />

        <!--  Login Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/login_text_input_layout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorTextAppearance="@style/error_appearance">
            <EditText android:id="@+id/input_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:hint="@string/prompt_email"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Password Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/password_text_input_layout_reg"
            app:passwordToggleEnabled="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorTextAppearance="@style/error_appearance">
            <EditText android:id="@+id/input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/prompt_password"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Phone Label -->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/phone_text_input_layout_reg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:errorTextAppearance="@style/error_appearance">
            <EditText android:id="@+id/input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/prompt_phone"
                android:maxLines="1"
                android:maxLength="@integer/phone_digits_number"
                android:singleLine="true"
                android:imeActionId="6"
                android:imeActionLabel="@string/sign_up"
                android:imeOptions="actionUnspecified"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Signup Button -->
        <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_signup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:padding="12dp"
        android:text="@string/create_account"/>

        <TextView android:id="@+id/link_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/registration_login_text"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorAccent"/>

    </LinearLayout>
</ScrollView>