<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@color/colorPrimary">

    <LinearLayout
        android:id="@+id/enter_auth_code_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:alpha="0.0">

        <EditText
            android:id="@+id/auth_code_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:gravity="center"/>

        <Button
            android:id="@+id/auth_enter_code_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/auth_enter_code"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/enter_phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:visibility="invisible"
        android:alpha="0.0">

        <EditText
            android:id="@+id/auth_phone_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:gravity="center"/>

        <Button
            android:id="@+id/auth_enter_phone_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/auth_telegram_button"
            android:text="@string/auth_telegram"
            android:drawableStart="@drawable/ic_telegram"
            style="@style/ButtonAuth"/>

        <Button
            android:id="@+id/auth_sms_button"
            android:text="@string/auth_sms"
            android:drawableStart="@drawable/ic_sms"
            style="@style/ButtonAuth"/>
    </LinearLayout>


</RelativeLayout>